Fix tests
Signed-off-by: subhramit <subhramit.bb@live.in>