@@ -1,7 +1,6 @@
 package org.jabref.logic.util;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -34,19 +33,19 @@ class ExternalLinkCreatorTest {
     @BeforeEach
     void setUp() {
         mockPreferences = mock(ImporterPreferences.class);
+        // By default, assume no custom templates are set
         when(mockPreferences.getSearchEngineUrlTemplates()).thenReturn(Map.of());
         linkCreator = new ExternalLinkCreator(mockPreferences);
     }
 
     /**
-     * Validates using java.net.URL.
-     * This mimics strict URLUtil behavior but accepts standard form encoding (+).
+     * Validates URL conformance to RFC 2396 using standard Java URI parsing.
      */
     private boolean urlIsValid(String url) {
         try {
-            new URL(url);
+            new URI(url);
             return true;
-        } catch (MalformedURLException e) {
+        } catch (Exception e) {
             return false;
         }
     }
@@ -79,26 +78,23 @@ class ExternalLinkCreatorTest {
             assertEquals(Optional.empty(), linkCreator.getShortScienceSearchURL(entry));
         }
 
-        /**
-         * FIX: BibEntry removes empty/blank strings, so these should return Empty, not a URL.
-         */
-        @ParameterizedTest
-        @ValueSource(strings = {"", " "})
-        void getShortScienceSearchURLReturnsEmptyForStandardWhitespace(String title) {
-            BibEntry entry = createEntryWithTitle(title);
-            Optional<String> url = linkCreator.getShortScienceSearchURL(entry);
-            assertEquals(Optional.empty(), url, "BibEntry should treat '" + title + "' as empty, resulting in no URL");
+        @Test
+        void getShortScienceSearchURLReturnsEmptyOnEmptyString() {
+            // BibEntry treats "" as a missing field, so we expect Empty
+            BibEntry entry = createEntryWithTitle("");
+            assertEquals(Optional.empty(), linkCreator.getShortScienceSearchURL(entry));
         }
 
-        /**
-         * FIX: NBSP (\u00A0) usually survives BibEntry trimming, so THIS one produces a URL.
-         */
         @ParameterizedTest
         @CsvSource({
-                // Input contains NBSP. Output contains encoded NBSP (%C2%A0) and space (%20)
+                // Standard space: Java trim() removes it -> "q="
+                "' ', 'https://www.shortscience.org/internalsearch?q='",
+
+                // Non-Breaking Space (NBSP): Java trim() keeps it -> "q=%C2%A0%20%C2%A0"
+                // (Note: URIBuilder encodes NBSP as %C2%A0 and the middle regular space as %20)
                 "'   ', 'https://www.shortscience.org/internalsearch?q=%C2%A0%20%C2%A0'"
         })
-        void getShortScienceSearchURLHandlesNBSP(String title, String expectedUrl) {
+        void getShortScienceSearchURLHandlesWhitespace(String title, String expectedUrl) {
             BibEntry entry = createEntryWithTitle(title);
             Optional<String> url = linkCreator.getShortScienceSearchURL(entry);
 
@@ -108,7 +104,7 @@ class ExternalLinkCreatorTest {
 
         @ParameterizedTest
         @CsvSource({
-                // Expecting %20 because we are using URIBuilder
+                // Standard cases using URIBuilder (%20 encoding)
                 "'JabRef bibliography management', 'https://www.shortscience.org/internalsearch?q=JabRef%20bibliography%20management'",
                 "'Machine learning', 'https://www.shortscience.org/internalsearch?q=Machine%20learning'",
         })
@@ -121,16 +117,12 @@ class ExternalLinkCreatorTest {
 
         @ParameterizedTest
         @CsvSource({
-                // Unicode: URIBuilder percent-encodes utf-8 bytes.
+                // Unicode characters
                 "'歷史書 📖 📚', 'q=%E6%AD%B7%E5%8F%B2%E6%9B%B8%20%F0%9F%93%96%20%F0%9F%93%9A'",
-
-                // NBSP (\u00A0) is encoded as %C2%A0. Regular spaces become %20.
+                // Mixed NBSP and standard space
                 "'    History Textbook   ', 'q=%C2%A0%20%C2%A0%20History%20Textbook%C2%A0%20%C2%A0'",
-
-                // Literal % becomes %25
+                // Literal symbols
                 "'History%20Textbook', 'q=History%2520Textbook'",
-
-                // Literal & becomes %26
                 "'A&B Research', 'q=A%26B%20Research'"
         })
         void getShortScienceSearchURLEncodesCharacters(String title, String expectedQueryPart) {
@@ -161,6 +153,20 @@ class ExternalLinkCreatorTest {
             // Expect %20 for space
             assertTrue(url.get().contains("author=John%20Doe"));
         }
+
+        @ParameterizedTest
+        @CsvSource({
+                "'Machine Learning', 'Smith & Jones', 'author=Smith%20%26%20Jones'",
+                "'Deep Learning', '李明', 'author=%E6%9D%8E%E6%98%8E'"
+        })
+        void getShortScienceSearchURLEncodesAuthorNames(String title, String author, String expectedAuthorEncoding) {
+            BibEntry entry = createEntryWithTitleAndAuthor(title, author);
+            Optional<String> url = linkCreator.getShortScienceSearchURL(entry);
+
+            assertTrue(url.isPresent());
+            assertTrue(urlIsValid(url.get()));
+            assertTrue(url.get().contains(expectedAuthorEncoding));
+        }
     }
 
     @Nested
@@ -183,6 +189,25 @@ class ExternalLinkCreatorTest {
             Optional<String> url = linkCreator.getGoogleScholarSearchURL(entry);
             assertEquals(Optional.of(expectedUrl), url);
         }
+
+        @ParameterizedTest
+        @ValueSource(strings = { "!*'();:@&=+$,/?#[]", "100% Complete", "Question?" })
+        void getGoogleScholarSearchURLEncodesSpecialCharacters(String title) {
+            BibEntry entry = createEntryWithTitle(title);
+            Optional<String> url = linkCreator.getGoogleScholarSearchURL(entry);
+            assertTrue(url.isPresent());
+            assertTrue(urlIsValid(url.get()));
+        }
+
+        @Test
+        void getGoogleScholarSearchURLIncludesAuthor() {
+            BibEntry entry = createEntryWithTitleAndAuthor("Quantum Computing", "Alice Smith");
+            Optional<String> url = linkCreator.getGoogleScholarSearchURL(entry);
+
+            assertTrue(url.isPresent());
+            assertTrue(urlIsValid(url.get()));
+            assertTrue(url.get().contains("author=Alice%20Smith"));
+        }
     }
 
     @Nested
@@ -190,7 +215,7 @@ class ExternalLinkCreatorTest {
 
         @Test
         void usesCustomTemplateWithTitlePlaceholder() {
-            // Manual template logic (URI Encoded) produces +
+            // Manual template logic uses URLEncoder, so we expect '+'
             when(mockPreferences.getSearchEngineUrlTemplates())
                     .thenReturn(Map.of("Short Science", "https://custom.com/search?title={title}"));
 
@@ -204,7 +229,7 @@ class ExternalLinkCreatorTest {
 
         @Test
         void fallsBackWhenTemplateMissingTitlePlaceholder() {
-            // Fallback logic (URIBuilder) produces %20
+            // Fallback logic uses URIBuilder, so we expect '%20'
             when(mockPreferences.getSearchEngineUrlTemplates())
                     .thenReturn(Map.of("Short Science", "https://custom.com/search"));
 
@@ -220,6 +245,26 @@ class ExternalLinkCreatorTest {
 
     @Nested
     class SecurityTests {
+        @ParameterizedTest
+        @ValueSource(strings = {
+                "mailto:test@example.com",
+                "javascript:alert('xss')",
+                "file:///etc/passwd",
+                "ftp://malicious.com"
+        })
+        void rejectsNonHttpSchemesAndFallsBack(String maliciousUrl) {
+            when(mockPreferences.getSearchEngineUrlTemplates())
+                    .thenReturn(Map.of("Short Science", maliciousUrl + "?q={title}"));
+
+            BibEntry entry = createEntryWithTitle("Test");
+            Optional<String> url = linkCreator.getShortScienceSearchURL(entry);
+
+            assertTrue(url.isPresent());
+            // Must fall back to the default secure HTTPS URL
+            assertTrue(url.get().startsWith("https://"));
+            assertTrue(urlIsValid(url.get()));
+        }
+
         @Test
         void handlesSqlInjectionAttempts() {
             BibEntry entry = createEntryWithTitle("'; DROP TABLE entries; --");
